--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.datasource.url=jdbc:mysql://localhost/api_curriculum
+spring.datasource.username=root
+spring.datasource.password=Mainzed@01
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+server.error.include-stacktrace=never
