add: finished security aplication and add new column called situacao in cadidado table

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 server.error.include-stacktrace=never
+
+api.security.token.secret=${JWT_SECRET:83e6506f-8b8c-4217-8366-d9c8a3951f9b}
