--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -5,3 +5,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
+
+
+api.security.token.secret=${JWT_SECRET:83e6506f-8b8c-4217-8366-d9c8a3951f9b}
