--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.driver-class-name=${DATABASE_DRIVER}
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.datasource.hikari.maximum-pool-size=20
 
 server.error.include-stacktrace=never
 
