--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -6,6 +6,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.hikari.maximum-pool-size=20
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 
 api.security.token.secret=${JWT_SECRET:83e6506f-8b8c-4217-8366-d9c8a3951f9b}
