--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.datasource.driver-class-name=${DATABASE_DRIVER}
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.hikari.maximum-pool-size=20
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 server.error.include-stacktrace=never
 
