--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/api_curriculum
-spring.datasource.username=postgres
-spring.datasource.password=Mainzed@01
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.driver-class-name=${DATABASE_DRIVER}
 
 
 spring.jpa.show-sql=true
