--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
-spring.datasource.driver-class-name=${DATABASE_DRIVER}
+spring.datasource.url=${DATABASE_URL:postgres://api_curriculum_user:EMUQaUgFzIJkCgIj93oTkbXHFVrAFO9o@dpg-cng9vl7sc6pc73eo7a70-a.oregon-postgres.render.com/api_curriculum}
+spring.datasource.username=${DATABASE_USERNAME:postgres}
+spring.datasource.password=${DATABASE_PASSWORD:Mainzed@01}
+spring.datasource.driver-class-name=${DATABASE_DRIVER:org.postgresql.Driver}
 
 
 spring.jpa.show-sql=true
